# pygedcom

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  test_and_doc.yml  testing.yml
docs/: conf.py  index.rst
docs/sources/: export.rst  gedcomElement.rst  gedcomParser.rst  gedcomRootElement.rst  gedcomSubElement.rst  getting_started.rst  parsing.rst
src/: FormatException.py  gedcom_parser.py
src/Elements/: element.py
src/elements/: date.py  element.py  family.py  head.py  individual.py  mapping.json  object.py  repository.py  source.py
src/elements/rootElements/: family.py  head.py  individual.py  object.py  repository.py  rootElement.py  source.py
src/elements/subElements/: commonEvent.py  date.py  map.py  place.py
src/elements/sub_elements/: commonEvent.py  date.py  map.py  place.py
src/pygedcom/: Exception.py  __init__.py  gedcom_parser.py
src/pygedcom/elements/: element.py
src/pygedcom/elements/rootElements/: family.py  head.py  individual.py  note.py  object.py  repository.py  rootElement.py  source.py  submitter.py
src/pygedcom/elements/subElements/: commonEvent.py  date.py  map.py  place.py
test/: test_add_elements.py  test_export.py  test_gedcom_parser.py  test_parse.py  test_remove_element.py  test_set_prop.py  test_verify.py
test/samples/: 00_simple_individual_record.ged  01_simple_family_record.ged  02_simple_source_record.ged  03_simple_repository_record.ged  04_simple_date_formats.ged  10_invalid_level.ged  20_complex_sample.ged
